--- a/app/src/main/res/layout/choosing_layout.xml
+++ b/app/src/main/res/layout/choosing_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/RelativeLayout01"
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/RelativeLayout01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -12,6 +13,46 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp" />
 
+    <ImageView
+        android:id="@+id/placeImage"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="36dp"
+        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background"
+        android:layout_below="@+id/mapView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp" />
+
+    <EditText
+        android:id="@+id/placeName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/placeImage"
+        android:layout_marginBottom="36dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginRight="23dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
+
+    <EditText
+        android:id="@+id/placeDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:layout_alignEnd="@+id/placeName"
+        android:layout_alignLeft="@+id/placeImage"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/placeName"
+        android:layout_alignStart="@+id/placeImage"
+        android:layout_below="@+id/placeImage"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:inputType="textMultiLine" />
 
 
 </RelativeLayout>
