--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:srcCompat="@drawable/me_face" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/settings_pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="220dp"
