Swipe compile shows nothing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="140dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
+        android:clickable="true"
         app:srcCompat="@drawable/me_face" />
 
     <ImageView
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="220dp"
         android:layout_marginTop="-45dp"
+        android:clickable="true"
         app:srcCompat="@android:drawable/ic_menu_manage" />
 
     <ImageView
@@ -30,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
         android:layout_marginTop="-32dp"
+        android:clickable="true"
         app:srcCompat="@android:drawable/ic_menu_edit" />
 
     <TextView
