--- a/app/src/main/res/layout/choosing_layout.xml
+++ b/app/src/main/res/layout/choosing_layout.xml
@@ -5,54 +5,22 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.lorentzos.flingswipe.SwipeFlingAdapterView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:rotation_degrees="16"
+        app:max_visible="4"
+        app:min_adapter_stack="6"
+        android:id="@+id/swipe_FlingLayout">
+    </com.lorentzos.flingswipe.SwipeFlingAdapterView>
+
+
     <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
-        android:layout_width="300dp"
-        android:layout_height="199dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp" />
-
-    <ImageView
-        android:id="@+id/placeImage"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="36dp"
-        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background"
-        android:layout_below="@+id/mapView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="23dp"
-        android:layout_marginStart="23dp" />
-
-    <EditText
-        android:id="@+id/placeName"
+        android:id="@+id/mapView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/placeImage"
-        android:layout_marginBottom="36dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginRight="23dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
-
-    <EditText
-        android:id="@+id/placeDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_alignEnd="@+id/placeName"
-        android:layout_alignLeft="@+id/placeImage"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/placeName"
-        android:layout_alignStart="@+id/placeImage"
-        android:layout_below="@+id/placeImage"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:inputType="textMultiLine" />
+        android:layout_below="@+id/swipe_FlingLayout"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
