--- a/app/src/main/res/layout/choosing_layout.xml
+++ b/app/src/main/res/layout/choosing_layout.xml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/RelativeLayout01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
+        android:id="@+id/swipe_FlingLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:rotation_degrees="16"
         app:max_visible="4"
-        app:min_adapter_stack="6"
-        android:id="@+id/swipe_FlingLayout">
-    </com.lorentzos.flingswipe.SwipeFlingAdapterView>
+        app:min_adapter_stack="2"
+        app:rotation_degrees="16"></com.lorentzos.flingswipe.SwipeFlingAdapterView>
 
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/swipe_FlingLayout"
-        android:layout_centerHorizontal="true" />
-
-
-</RelativeLayout>
+</LinearLayout>
