--- a/app/src/main/res/layout/swipe_cards_atributes.xml
+++ b/app/src/main/res/layout/swipe_cards_atributes.xml
@@ -1,49 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe_relativeLayout"
+    android:layout_width="match_parent"
+    android:layout_height="450dp"
+    android:orientation="vertical"
+    android:paddingBottom="15dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="15dp">
+
+    <ImageView
+        android:id="@+id/placeImage"
+        android:layout_width="250dp"
+        android:layout_height="170dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center_horizontal"
+        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background" />
+
+    <EditText
+        android:id="@+id/placeName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="23dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="36dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginRight="23dp"
-        android:id="@+id/swipe_relativeLayout"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/placeImage"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/placeImage"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            />
+    <EditText
+        android:id="@+id/address_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/placeName"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="textPersonName"
+        android:text="Address" />
+    <EditText
+        android:id="@+id/placeDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/address_text"
+        android:minHeight="100dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:inputType="textPersonName"
+        android:text="Description..." />
 
-        <EditText
-            android:id="@+id/placeName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/placeImage"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
-
-        <EditText
-            android:id="@+id/placeDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:layout_alignEnd="@+id/placeName"
-            android:layout_alignLeft="@+id/placeImage"
-            android:layout_alignRight="@+id/placeName"
-            android:layout_alignStart="@+id/placeImage"
-            android:layout_below="@+id/placeImage"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:inputType="textMultiLine" />
-
-</RelativeLayout>
+</LinearLayout>
