--- a/app/src/main/res/layout/swipe_cards_atributes.xml
+++ b/app/src/main/res/layout/swipe_cards_atributes.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipe_relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="500dp"
+    android:background="@color/common_google_signin_btn_text_dark_default"
     android:orientation="vertical"
     android:paddingBottom="15dp"
     android:paddingLeft="10dp"
@@ -19,44 +20,48 @@
         android:layout_gravity="center_horizontal"
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background" />
 
-    <EditText
+    <TextView
         android:id="@+id/placeName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/placeImage"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:gravity="center_horizontal"
         android:inputType="textPersonName"
         android:text="Name"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
-    <EditText
+    <TextView
         android:id="@+id/address_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/placeName"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:gravity="center_horizontal"
         android:inputType="textPersonName"
-        android:text="Address" />
-    <EditText
+        android:text="Address"
+        android:textSize="22sp" />
+
+    <TextView
         android:id="@+id/placeDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/address_text"
-        android:minHeight="100dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:gravity="center_horizontal"
         android:inputType="textPersonName"
-        android:text="Description..." />
+        android:minHeight="100dp"
+        android:text="Description..."
+        android:textSize="20sp" />
 
 </LinearLayout>
