--- a/app/src/main/res/layout/swipe_cards_atributes.xml
+++ b/app/src/main/res/layout/swipe_cards_atributes.xml
@@ -35,19 +35,19 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/address_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/placeName"
-        android:layout_marginTop="15dp"
-        android:ems="10"
-        android:gravity="center_horizontal"
-        android:inputType="textPersonName"
-        android:text="Address"
-        android:textSize="22sp" />
+    <!--<TextView-->
+        <!--android:id="@+id/address_text"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignTop="@+id/placeName"-->
+        <!--android:layout_marginTop="15dp"-->
+        <!--android:ems="10"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:inputType="textPersonName"-->
+        <!--android:text="Address"-->
+        <!--android:textSize="22sp" />-->
 
     <TextView
         android:id="@+id/placeDescription"
